--- a/analysis/hello_world/jupyter_hello_world.ipynb
+++ b/analysis/hello_world/jupyter_hello_world.ipynb
@@ -49,6 +49,8 @@
     }
    ],
    "source": [
+    "# just some example code copied from seaborn documentation\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -213,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Jupyter notebook also support shell command, with a \"!\" before your normal command"
+    "## Jupyter notebook also supports shell command, with a \"!\" before your normal command"
    ]
   },
   {
