--- a/data/DevFB/1.DownloadAndPrepareMetadata.ipynb
+++ b/data/DevFB/1.DownloadAndPrepareMetadata.ipynb
@@ -24,7 +24,10 @@
     "    - P0\n",
     "- Each time point has two replicates, a total of 16 RNA-seq\n",
     "- Some experiments are pair-end sequencing, some are single end\n",
-    "- We start from a total of 25 fastq files from ENCODE, all experiments are single end sequencing"
+    "- We start from a total of 25 fastq files from ENCODE, all experiments are single end sequencing\n",
+    "\n",
+    "\n",
+    "*Note: all fastq file and the salmon index doesn't included in the github, I just provide you the code I used to process it, but you don't need to rerun this on a laptop*"
    ]
   },
   {
@@ -80,7 +83,7 @@
    "source": [
     "# These are the URL to download files\n",
     "!cat ./fastq/files.txt\n",
-    "# This command download all files\n",
+    "# This command download all files, ~30 GBs, you don't need to repeat\n",
     "# !xargs -L 1 curl -O -L < files.txt"
    ]
   },
@@ -133,6 +136,8 @@
    "source": [
     "# rename the raw metadata file\n",
     "!mv ?type\\=Experiment\\&status\\=released\\&files.file_type\\=fastq\\&lab.title\\=Barbara+Wold%2C+Caltech\\&biosample_ontology.term_name\\=forebrain raw_metadata.csv\n",
+    "\n",
+    "# check out what has been downloaded\n",
     "!ls -hl ./fastq"
    ]
   },
@@ -154,9 +159,9 @@
    },
    "outputs": [],
    "source": [
-    "# pandas handle table\n",
+    "# pandas handle table, its the \"excel\" in python\n",
     "import pandas as pd\n",
-    "# pathlib handle all path related\n",
+    "# pathlib handle all path related stuff\n",
     "import pathlib"
    ]
   },
@@ -749,7 +754,7 @@
     }
    ],
    "source": [
-    "# I manually create this sample table\n",
+    "# I manually create this sample table, which contains the developmental time information\n",
     "exp_meta = pd.read_csv('metadata/ENCODE_experiments.tsv', sep='\\t', index_col=-1)\n",
     "print('The dataframe shape', exp_meta.shape)\n",
     "exp_meta.head()"
@@ -1241,6 +1246,14 @@
     "    \n",
     "metadata_selected['file_name'] = output_path_records\n",
     "metadata_selected.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the completed metadata table\n",
+    "In each step, I will generate a metadata table to record related informations about all files and samples. This table will guide the next step."
    ]
   },
   {
