--- a/analysis/file_io/basic_python_io.ipynb
+++ b/analysis/file_io/basic_python_io.ipynb
@@ -730,6 +730,296 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## File Handle and the invisible cursor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:05:09.199541Z",
+     "start_time": "2020-04-22T23:05:09.195167Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='this.txt' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# here I use method 1 to better explain what is a file handle\n",
+    "# you should still use with\n",
+    "file_handle = open('this.txt')\n",
+    "file_handle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:05:09.753502Z",
+     "start_time": "2020-04-22T23:05:09.749333Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nThe Zen of Python, by Tim Peters\\n\\nBeautiful is better than ugly.\\nExplicit is better than implicit.\\nSimple is better than complex.\\nComplex is better than complicated.\\nFlat is better than nested.\\nSparse is better than dense.\\nReadability counts.\\nSpecial cases aren't special enough to break the rules.\\nAlthough practicality beats purity.\\nErrors should never pass silently.\\nUnless explicitly silenced.\\nIn the face of ambiguity, refuse the temptation to guess.\\nThere should be one-- and preferably only one --obvious way to do it.\\nAlthough that way may not be obvious at first unless you're Dutch.\\nNow is better than never.\\nAlthough never is often better than *right* now.\\nIf the implementation is hard to explain, it's a bad idea.\\nIf the implementation is easy to explain, it may be a good idea.\\nNamespaces are one honking great idea -- let's do more of those!\\n\""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read() will read everything into one string\n",
+    "file_handle.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:05:13.887326Z",
+     "start_time": "2020-04-22T23:05:13.882552Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if you read twice, you got nothing, why?\n",
+    "file_handle.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:07:20.460530Z",
+     "start_time": "2020-04-22T23:07:20.456022Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "858"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is because file_handle has an internal cursor to indicate what's been read, and only read remaining contents\n",
+    "# because the first read() has got everything, the cursor is at the end of the file, there is noting new to read\n",
+    "\n",
+    "# we can confirm this using tell()\n",
+    "file_handle.tell()\n",
+    "\n",
+    "# this number means current cursor location, which is the end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:07:54.200755Z",
+     "start_time": "2020-04-22T23:07:54.195949Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now if we reopen the file\n",
+    "file_handle.close()\n",
+    "\n",
+    "file_handle = open('this.txt')\n",
+    "file_handle.tell()\n",
+    "# you see the cursor go back to start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:11:13.663535Z",
+     "start_time": "2020-04-22T23:11:13.659615Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now lets only read one line\n",
+    "file_handle.readline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:11:13.871939Z",
+     "start_time": "2020-04-22T23:11:13.865930Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the curcor moved\n",
+    "file_handle.tell()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We can move the cursor as we want!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:11:14.841211Z",
+     "start_time": "2020-04-22T23:11:14.836981Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before 1\n",
+      "after 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now let me tell you another method\n",
+    "# seek()\n",
+    "\n",
+    "print('before', file_handle.tell())\n",
+    "# seek move the cursor back to start\n",
+    "print('after', file_handle.seek(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:11:25.015591Z",
+     "start_time": "2020-04-22T23:11:25.010984Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we can read the first line again\n",
+    "file_handle.readline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-22T23:12:04.720120Z",
+     "start_time": "2020-04-22T23:12:04.715909Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Simple is better than complex.\\n'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if we go to a random position\n",
+    "file_handle.seek(100)\n",
+    "\n",
+    "# readline() start from there\n",
+    "file_handle.readline()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
