--- a/analysis/hello_world/check_package_installation.ipynb
+++ b/analysis/hello_world/check_package_installation.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T03:14:06.630837Z",
-     "start_time": "2020-04-23T03:14:06.509710Z"
+     "end_time": "2020-04-23T03:49:33.349609Z",
+     "start_time": "2020-04-23T03:49:33.226802Z"
     }
    },
    "outputs": [
@@ -27,11 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T03:49:33.355448Z",
+     "start_time": "2020-04-23T03:49:33.353206Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# This whole notebook rely on the python interpreter abot"
+    "# This whole notebook rely on the python interpreter above, \n",
+    "# Jupyter Notebook is just and interactive GUI of the python interpreter"
    ]
   },
   {
@@ -39,13 +45,47 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T03:14:12.155999Z",
-     "start_time": "2020-04-23T03:14:11.889135Z"
+     "end_time": "2020-04-23T03:49:33.719583Z",
+     "start_time": "2020-04-23T03:49:33.358295Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successful import means pandas is installed\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas"
+    "import pandas as pd\n",
+    "print('Successful import means pandas is installed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-23T03:49:33.731016Z",
+     "start_time": "2020-04-23T03:49:33.722274Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.0.3'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.__version__"
    ]
   },
   {
