--- a/analysis/python_basic/explor_jupyter_notebook_environment.ipynb
+++ b/analysis/python_basic/explor_jupyter_notebook_environment.ipynb
@@ -37,8 +37,6 @@
     }
    ],
    "source": [
-    "# This stackoverflow tell me how to check the location of my current python interpreter\n",
-    "\n",
     "import sys\n",
     "print(sys.executable)\n",
     "\n",
@@ -185,7 +183,7 @@
     }
    ],
    "source": [
-    "# locals() function print out all loc\n",
+    "# locals() function print out all local variables\n",
     "locals()"
    ]
   },
@@ -389,7 +387,7 @@
    "source": [
     "%whos\n",
     "\n",
-    "# pd the module is added into local variables, \n",
+    "# The module pd is added into local variables, \n",
     "# we can use pd.DataFrame to create data frame or pd.read_csv to read csv files\n",
     "\n",
     "# whos help you hide many jupyter defalut variables, here it only shows all the variables defined by me"
@@ -517,7 +515,7 @@
    "source": [
     "%whos\n",
     "\n",
-    "# see whats in the local variables now, pd and read_csv is added!"
+    "# see whats in the local variables now, read_csv is added!"
    ]
   },
   {
@@ -526,10 +524,9 @@
    "source": [
     "## One last thing - What's in a python module\n",
     "\n",
-    "- The dir() function allows you check all avaliable methods within a python module\n",
     "- When you import pandas as pd, you open the pandas module and use the pd name as a entry point\n",
     "- And when you say pd.read_csv(), python interpreter go into pd module to look for a function named read_csv\n",
-    "- Its also in the list below"
+    "- The dir() function allows you check all avaliable methods within a python module"
    ]
   },
   {
@@ -703,7 +700,7 @@
    "metadata": {},
    "source": [
     "- You don't need to remember the whole list, you won't need many of them also\n",
-    "- This is just helping you understand what happened when you import something into python (or the jupyter python environment)"
+    "- This is just helping you understand what happened when you import something into python"
    ]
   },
   {
@@ -716,20 +713,6 @@
     "- A live Jupyter Notebook is a python process\n",
     "- All python variables and modules you created/imported are in the local variables, you can create from one cell, use them in the other cell"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
