--- a/data/DevFB/2.fastqTrimAndQC.ipynb
+++ b/data/DevFB/2.fastqTrimAndQC.ipynb
@@ -23,14 +23,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Read metadata from last step\n",
-    "- The metadata from last step records all sample information, guide me in this step"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -415,8 +407,7 @@
    "outputs": [],
    "source": [
     "output_dir = pathlib.Path('fastq/trimmed/').absolute()\n",
-    "\n",
-    "# another way to make dir, using python (pathlib) but not shell command\n",
+    "# another way to make dir\n",
     "output_dir.mkdir(exist_ok=True)\n",
     "\n",
     "fastq_dir = pathlib.Path('fastq/data/').absolute()"
@@ -569,7 +560,6 @@
    ],
    "source": [
     "# find out all the trimmed fastq, make a dict\n",
-    "# the glob method uses wildcard to find all files whose name match the pattern\n",
     "fastq_list = list(output_dir.glob('*trimmed.fq.gz'))\n",
     "fastq_list[:5]"
    ]
@@ -975,6 +965,62 @@
    "source": [
     "fastq_meta.to_csv('metadata/trimmed_fastq_metadata.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
