--- a/analysis/salmon_demo/step3.fastqTrimAndQC.ipynb
+++ b/analysis/salmon_demo/step3.fastqTrimAndQC.ipynb
@@ -40,14 +40,15 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:17:07.708394Z",
-     "start_time": "2020-05-20T22:17:07.355319Z"
+     "end_time": "2020-06-01T06:15:02.592405Z",
+     "start_time": "2020-06-01T06:15:02.281587Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pathlib"
+    "import pathlib\n",
+    "import subprocess"
    ]
   },
   {
@@ -55,8 +56,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:17:08.166275Z",
-     "start_time": "2020-05-20T22:17:08.139839Z"
+     "end_time": "2020-06-01T06:15:03.141714Z",
+     "start_time": "2020-06-01T06:15:03.116189Z"
     }
    },
    "outputs": [
@@ -428,8 +429,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:17:08.728445Z",
-     "start_time": "2020-05-20T22:17:08.724603Z"
+     "end_time": "2020-06-01T06:15:03.616372Z",
+     "start_time": "2020-06-01T06:15:03.612144Z"
     }
    },
    "outputs": [],
@@ -450,11 +451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:29:07.854548Z",
-     "start_time": "2020-05-20T22:27:17.540074Z"
+     "end_time": "2020-06-01T06:17:07.734973Z",
+     "start_time": "2020-06-01T06:15:04.757929Z"
     },
     "scrolled": true
    },
@@ -542,11 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:17:11.706938Z",
-     "start_time": "2020-05-20T22:17:11.677741Z"
+     "end_time": "2020-06-01T06:18:51.381106Z",
+     "start_time": "2020-06-01T06:18:51.324188Z"
     }
    },
    "outputs": [],
@@ -561,11 +562,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-20T22:25:43.794957Z",
-     "start_time": "2020-05-20T22:24:58.640827Z"
+     "end_time": "2020-06-01T06:19:50.600547Z",
+     "start_time": "2020-06-01T06:18:51.854601Z"
     }
    },
    "outputs": [
@@ -573,31 +574,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forebrain_E16.5_1_ENCFF931IVO.fastq.gz trim finished.\n",
-      "forebrain_E13.5_1_ENCFF235DNM.fastq.gz trim finished.\n",
+      "forebrain_E13.5_2_ENCFF959PSX.fastq.gz trim finished.\n",
+      "forebrain_E11.5_1_ENCFF329ACL.fastq.gz trim finished.\n",
+      "forebrain_E11.5_2_ENCFF251LNG.fastq.gz trim finished.\n",
       "forebrain_E11.5_2_ENCFF896COV.fastq.gz trim finished.\n",
-      "forebrain_E10.5_2_ENCFF528EVC.fastq.gz trim finished.\n",
+      "forebrain_E13.5_1_ENCFF235DNM.fastq.gz trim finished.\n",
+      "forebrain_E14.5_1_ENCFF460TCF.fastq.gz trim finished.\n",
+      "forebrain_E14.5_1_ENCFF270GKY.fastq.gz trim finished.\n",
+      "forebrain_E14.5_2_ENCFF126IRS.fastq.gz trim finished.\n",
+      "forebrain_E14.5_2_ENCFF748SRJ.fastq.gz trim finished.\n",
+      "forebrain_P0_1_ENCFF037JQC.fastq.gz trim finished.\n",
+      "forebrain_P0_2_ENCFF447EXU.fastq.gz trim finished.\n",
+      "forebrain_P0_2_ENCFF458NWF.fastq.gz trim finished.\n",
+      "forebrain_E15.5_2_ENCFF891HIX.fastq.gz trim finished.\n",
+      "forebrain_E12.5_2_ENCFF203BWA.fastq.gz trim finished.\n",
+      "forebrain_P0_1_ENCFF358MFI.fastq.gz trim finished.\n",
       "forebrain_E15.5_1_ENCFF179JEC.fastq.gz trim finished.\n",
       "forebrain_E10.5_1_ENCFF920CNZ.fastq.gz trim finished.\n",
-      "forebrain_E13.5_2_ENCFF959PSX.fastq.gz trim finished.\n",
-      "forebrain_E12.5_2_ENCFF700OLU.fastq.gz trim finished.\n",
-      "forebrain_E12.5_2_ENCFF203BWA.fastq.gz trim finished.\n",
-      "forebrain_E14.5_1_ENCFF460TCF.fastq.gz trim finished.\n",
-      "forebrain_E11.5_1_ENCFF329ACL.fastq.gz trim finished.\n",
-      "forebrain_E14.5_1_ENCFF270GKY.fastq.gz trim finished.\n",
-      "forebrain_E14.5_2_ENCFF748SRJ.fastq.gz trim finished.\n",
-      "forebrain_E10.5_2_ENCFF663SNC.fastq.gz trim finished.\n",
-      "forebrain_P0_1_ENCFF037JQC.fastq.gz trim finished.\n",
-      "forebrain_E14.5_2_ENCFF126IRS.fastq.gz trim finished.\n",
-      "forebrain_E16.5_2_ENCFF114DRT.fastq.gz trim finished.\n",
-      "forebrain_P0_2_ENCFF447EXU.fastq.gz trim finished.\n",
-      "forebrain_E12.5_1_ENCFF920QAY.fastq.gz trim finished.\n",
-      "forebrain_P0_1_ENCFF358MFI.fastq.gz trim finished.\n",
-      "forebrain_E11.5_2_ENCFF251LNG.fastq.gz trim finished.\n",
-      "forebrain_E10.5_1_ENCFF320FJX.fastq.gz trim finished.\n",
-      "forebrain_E15.5_2_ENCFF891HIX.fastq.gz trim finished.\n",
       "forebrain_E12.5_1_ENCFF294JRP.fastq.gz trim finished.\n",
-      "forebrain_P0_2_ENCFF458NWF.fastq.gz trim finished.\n"
+      "forebrain_E12.5_1_ENCFF920QAY.fastq.gz trim finished.\n",
+      "forebrain_E12.5_2_ENCFF700OLU.fastq.gz trim finished.\n",
+      "forebrain_E10.5_1_ENCFF320FJX.fastq.gz trim finished.\n",
+      "forebrain_E10.5_2_ENCFF663SNC.fastq.gz trim finished.\n",
+      "forebrain_E16.5_1_ENCFF931IVO.fastq.gz trim finished.\n",
+      "forebrain_E10.5_2_ENCFF528EVC.fastq.gz trim finished.\n",
+      "forebrain_E16.5_2_ENCFF114DRT.fastq.gz trim finished.\n"
      ]
     }
    ],
