--- a/analysis/DEGDemo/analysis/3.Pairwise_DEG_by_DESeq2_master.ipynb
+++ b/analysis/DEGDemo/analysis/3.Pairwise_DEG_by_DESeq2_master.ipynb
@@ -30,8 +30,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T08:43:23.661389Z",
-     "start_time": "2020-06-10T08:43:23.439993Z"
+     "end_time": "2020-06-11T18:35:51.855448Z",
+     "start_time": "2020-06-11T18:35:50.414703Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T08:43:23.675696Z",
-     "start_time": "2020-06-10T08:43:23.664669Z"
+     "end_time": "2020-06-11T18:35:51.868623Z",
+     "start_time": "2020-06-11T18:35:51.858077Z"
     }
    },
    "outputs": [
@@ -74,8 +74,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-10T08:43:23.685248Z",
-     "start_time": "2020-06-10T08:43:23.678324Z"
+     "end_time": "2020-06-11T18:37:02.716343Z",
+     "start_time": "2020-06-11T18:35:52.436106Z"
     }
    },
    "outputs": [
@@ -83,12 +83,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run ('E10.5', 'E14.5')\n",
-      "Skip. DEG table already exists.\n",
-      "Run ('E10.5', 'P0')\n",
-      "Skip. DEG table already exists.\n",
-      "Run ('E14.5', 'P0')\n",
-      "Skip. DEG table already exists.\n"
+      "Run ('E10.5', 'E14.5')\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ceb08d1fc6f48e681b46ee1629ded9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Executing', max=29.0, style=ProgressStyle(description_wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Run ('E10.5', 'P0')\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c3c018002304dd58bb2810ba55380ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Executing', max=29.0, style=ProgressStyle(description_wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Run ('E14.5', 'P0')\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "619d1970834f46f7babc94edfd3df1c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Executing', max=29.0, style=ProgressStyle(description_wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
