--- a/analysis/DEGDemo/analysis/4.filter_and_plot_volcano.ipynb
+++ b/analysis/DEGDemo/analysis/4.filter_and_plot_volcano.ipynb
@@ -24,8 +24,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:02.319957Z",
-     "start_time": "2020-06-11T07:00:01.439601Z"
+     "end_time": "2020-06-11T18:37:19.734873Z",
+     "start_time": "2020-06-11T18:37:17.315136Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:02.325683Z",
-     "start_time": "2020-06-11T07:00:02.322794Z"
+     "end_time": "2020-06-11T18:37:19.743852Z",
+     "start_time": "2020-06-11T18:37:19.738022Z"
     }
    },
    "outputs": [],
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:02.645967Z",
-     "start_time": "2020-06-11T07:00:02.414135Z"
+     "end_time": "2020-06-11T18:37:20.118669Z",
+     "start_time": "2020-06-11T18:37:19.748310Z"
     }
    },
    "outputs": [
@@ -225,7 +225,7 @@
        "ENSMUSG00000103377.1  OTTMUSG00000049960.1             NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:02.894318Z",
-     "start_time": "2020-06-11T07:00:02.648115Z"
+     "end_time": "2020-06-11T18:38:10.042876Z",
+     "start_time": "2020-06-11T18:38:09.663436Z"
     }
    },
    "outputs": [],
@@ -253,7 +253,11 @@
     "total_deg = []\n",
     "for cluster_a, cluster_b in pairs:\n",
     "    # read each pair DEG result\n",
-    "    deg_results = pd.read_csv(f'{cluster_a}_vs_{cluster_b}.deg_results.csv', index_col=0)\n",
+    "    deg_results = pd.read_csv(f'{cluster_a}_vs_{cluster_b}.deg_results.csv.gz', index_col=0)\n",
+    "    \n",
+    "    # the last four columns are normalized counts, here we don't need that\n",
+    "    deg_results = deg_results.iloc[:, :-4].copy()\n",
+    "    \n",
     "    deg_results['cluster_a'] = cluster_a\n",
     "    deg_results['cluster_b'] = cluster_b\n",
     "    deg_results['pair_name'] = f'{cluster_a}_vs_{cluster_b}'\n",
@@ -270,11 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:02.922415Z",
-     "start_time": "2020-06-11T07:00:02.897184Z"
+     "end_time": "2020-06-11T18:38:10.570437Z",
+     "start_time": "2020-06-11T18:38:10.556928Z"
     }
    },
    "outputs": [
@@ -427,7 +431,7 @@
        "ENSMUSG00000000049.11     E14.5  E10.5_vs_E14.5      Apoh  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,11 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:02.963856Z",
-     "start_time": "2020-06-11T07:00:02.926736Z"
+     "end_time": "2020-06-11T18:38:22.845334Z",
+     "start_time": "2020-06-11T18:38:22.821072Z"
     }
    },
    "outputs": [],
@@ -455,11 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:02.992204Z",
-     "start_time": "2020-06-11T07:00:02.970509Z"
+     "end_time": "2020-06-11T18:38:23.480299Z",
+     "start_time": "2020-06-11T18:38:23.412935Z"
     }
    },
    "outputs": [
@@ -490,11 +494,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:03.012092Z",
-     "start_time": "2020-06-11T07:00:03.006053Z"
+     "end_time": "2020-06-11T18:38:24.503811Z",
+     "start_time": "2020-06-11T18:38:24.501298Z"
     }
    },
    "outputs": [],
@@ -517,11 +521,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:03.031174Z",
-     "start_time": "2020-06-11T07:00:03.022145Z"
+     "end_time": "2020-06-11T18:38:25.278021Z",
+     "start_time": "2020-06-11T18:38:25.272822Z"
     }
    },
    "outputs": [],
@@ -534,11 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:03.063390Z",
-     "start_time": "2020-06-11T07:00:03.038573Z"
+     "end_time": "2020-06-11T18:38:25.704832Z",
+     "start_time": "2020-06-11T18:38:25.689896Z"
     }
    },
    "outputs": [
@@ -705,7 +709,7 @@
        "ENSMUSG00000000049.11     E14.5  E10.5_vs_E14.5      Apoh   -0.000000  False  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,11 +727,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:03.355986Z",
-     "start_time": "2020-06-11T07:00:03.072293Z"
+     "end_time": "2020-06-11T18:38:26.930589Z",
+     "start_time": "2020-06-11T18:38:26.739532Z"
     }
    },
    "outputs": [
@@ -740,7 +744,7 @@
        "Name: pair_name, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,11 +772,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:03.449576Z",
-     "start_time": "2020-06-11T07:00:03.358048Z"
+     "end_time": "2020-06-11T18:38:27.806359Z",
+     "start_time": "2020-06-11T18:38:27.660089Z"
     }
    },
    "outputs": [
@@ -798,11 +802,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:03.543979Z",
-     "start_time": "2020-06-11T07:00:03.454584Z"
+     "end_time": "2020-06-11T18:38:28.296729Z",
+     "start_time": "2020-06-11T18:38:28.247259Z"
     }
    },
    "outputs": [
@@ -928,7 +932,7 @@
        "[3918 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,11 +946,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:03.862838Z",
-     "start_time": "2020-06-11T07:00:03.548441Z"
+     "end_time": "2020-06-11T18:38:28.976706Z",
+     "start_time": "2020-06-11T18:38:28.742558Z"
     }
    },
    "outputs": [
@@ -968,7 +972,7 @@
        "Length: 3918, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,11 +984,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:04.113054Z",
-     "start_time": "2020-06-11T07:00:03.866439Z"
+     "end_time": "2020-06-11T18:38:29.523299Z",
+     "start_time": "2020-06-11T18:38:29.288132Z"
     }
    },
    "outputs": [
@@ -1039,8 +1043,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:23.764261Z",
-     "start_time": "2020-06-11T07:00:14.225422Z"
+     "end_time": "2020-06-11T18:38:40.518603Z",
+     "start_time": "2020-06-11T18:38:30.802801Z"
     },
     "scrolled": true
    },
@@ -1117,8 +1121,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T07:00:37.263713Z",
-     "start_time": "2020-06-11T07:00:29.538210Z"
+     "end_time": "2020-06-11T18:38:48.005847Z",
+     "start_time": "2020-06-11T18:38:40.521007Z"
     }
    },
    "outputs": [
