--- a/analysis/DEGDemo/analysis/5.Prepare GSEA input files.ipynb
+++ b/analysis/DEGDemo/analysis/5.Prepare GSEA input files.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T18:39:59.188285Z",
-     "start_time": "2020-06-11T18:39:59.185619Z"
+     "end_time": "2020-06-18T14:42:57.087853Z",
+     "start_time": "2020-06-18T14:42:56.659557Z"
     }
    },
    "outputs": [],
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T18:40:25.043550Z",
-     "start_time": "2020-06-11T18:40:25.040558Z"
+     "end_time": "2020-06-18T14:42:57.482825Z",
+     "start_time": "2020-06-18T14:42:57.480121Z"
     }
    },
    "outputs": [],
@@ -53,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T18:44:30.570713Z",
-     "start_time": "2020-06-11T18:44:30.334272Z"
+     "end_time": "2020-06-18T14:42:58.603706Z",
+     "start_time": "2020-06-18T14:42:58.404658Z"
     }
    },
    "outputs": [],
@@ -74,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T20:12:39.174717Z",
-     "start_time": "2020-06-11T20:12:39.171325Z"
+     "end_time": "2020-06-18T14:42:59.412653Z",
+     "start_time": "2020-06-18T14:42:59.409465Z"
     }
    },
    "outputs": [],
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T20:14:42.946282Z",
-     "start_time": "2020-06-11T20:14:42.480862Z"
+     "end_time": "2020-06-18T14:43:00.848118Z",
+     "start_time": "2020-06-18T14:43:00.072851Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,7 @@
     "    deg_with_norm_count = pd.read_csv(path, index_col=0)\n",
     "    \n",
     "    # take the last four columns, which are nrom counts\n",
-    "    # use reindex to select only DEGs\n",
-    "    nrom_count_df = deg_with_norm_count.iloc[:, -4:].reindex(deg_for_this_pair.index)\n",
+    "    nrom_count_df = deg_with_norm_count.iloc[:, -4:].copy()\n",
     "    \n",
     "    # change the index into gene names\n",
     "    nrom_count_df.index = nrom_count_df.index.map(gene_meta['gene_name'])\n",
@@ -153,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T20:14:42.955189Z",
-     "start_time": "2020-06-11T20:14:42.949015Z"
+     "end_time": "2020-06-18T14:43:01.223746Z",
+     "start_time": "2020-06-18T14:43:01.221005Z"
     }
    },
    "outputs": [
@@ -179,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-11T20:14:42.990343Z",
-     "start_time": "2020-06-11T20:14:42.964045Z"
+     "end_time": "2020-06-18T14:43:01.604827Z",
+     "start_time": "2020-06-18T14:43:01.589096Z"
     }
    },
    "outputs": [
@@ -225,7 +224,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Cdc45</th>\n",
+       "      <td>Gnai3</td>\n",
+       "      <td>na</td>\n",
+       "      <td>9202.231171</td>\n",
+       "      <td>14212.226704</td>\n",
+       "      <td>8662.583742</td>\n",
+       "      <td>14009.861823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Cdc45</td>\n",
        "      <td>na</td>\n",
        "      <td>314.416946</td>\n",
        "      <td>3516.109813</td>\n",
@@ -233,39 +240,31 @@
        "      <td>3574.620925</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Dlg3</th>\n",
+       "      <td>H19</td>\n",
        "      <td>na</td>\n",
-       "      <td>244.669525</td>\n",
-       "      <td>1009.880927</td>\n",
-       "      <td>242.044252</td>\n",
-       "      <td>1113.534396</td>\n",
+       "      <td>676.439274</td>\n",
+       "      <td>3572.409795</td>\n",
+       "      <td>578.105693</td>\n",
+       "      <td>4100.185758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Uhrf1</th>\n",
+       "      <td>Scml2</td>\n",
        "      <td>na</td>\n",
-       "      <td>859.111091</td>\n",
-       "      <td>23704.051793</td>\n",
-       "      <td>759.138790</td>\n",
-       "      <td>24678.145384</td>\n",
+       "      <td>157.208473</td>\n",
+       "      <td>312.288963</td>\n",
+       "      <td>181.033097</td>\n",
+       "      <td>275.945914</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Fndc5</th>\n",
+       "      <td>Apoh</td>\n",
        "      <td>na</td>\n",
-       "      <td>453.911788</td>\n",
-       "      <td>32.548427</td>\n",
-       "      <td>528.096550</td>\n",
-       "      <td>54.604139</td>\n",
+       "      <td>6.642612</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.001097</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ube2c</th>\n",
-       "      <td>na</td>\n",
-       "      <td>774.971345</td>\n",
-       "      <td>12599.760032</td>\n",
-       "      <td>812.148482</td>\n",
-       "      <td>12513.123384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -273,83 +272,83 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Gm49325</th>\n",
+       "      <td>AC093451.1</td>\n",
        "      <td>na</td>\n",
-       "      <td>498.195865</td>\n",
-       "      <td>524.293582</td>\n",
-       "      <td>435.079544</td>\n",
-       "      <td>585.044341</td>\n",
+       "      <td>4.428408</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Sfta3-ps</th>\n",
+       "      <td>AC154013.1</td>\n",
        "      <td>na</td>\n",
-       "      <td>63.104810</td>\n",
-       "      <td>449.520169</td>\n",
-       "      <td>106.019383</td>\n",
-       "      <td>511.913799</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.759374</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.900296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Bc1</th>\n",
+       "      <td>AC127285.1</td>\n",
        "      <td>na</td>\n",
-       "      <td>13236.510573</td>\n",
-       "      <td>540.127952</td>\n",
-       "      <td>7083.295007</td>\n",
-       "      <td>584.069267</td>\n",
+       "      <td>2.214204</td>\n",
+       "      <td>6.157811</td>\n",
+       "      <td>1.000183</td>\n",
+       "      <td>20.476552</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Gm50241</th>\n",
+       "      <td>CT868690.1</td>\n",
        "      <td>na</td>\n",
-       "      <td>21.034937</td>\n",
-       "      <td>1599.271363</td>\n",
-       "      <td>188.034377</td>\n",
-       "      <td>1500.638735</td>\n",
+       "      <td>7.749713</td>\n",
+       "      <td>0.879687</td>\n",
+       "      <td>2.000366</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Gm29695</th>\n",
+       "      <td>AC117663.3</td>\n",
        "      <td>na</td>\n",
-       "      <td>40.962771</td>\n",
-       "      <td>336.920205</td>\n",
-       "      <td>55.010057</td>\n",
-       "      <td>195.014780</td>\n",
+       "      <td>1.107102</td>\n",
+       "      <td>1.759374</td>\n",
+       "      <td>3.000549</td>\n",
+       "      <td>2.925222</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>487 rows × 5 columns</p>\n",
+       "<p>26782 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         DESCRIPTION  forebrain_P0_2  forebrain_E10.5_1  forebrain_P0_1  \\\n",
-       "NAME                                                                      \n",
-       "Cdc45             na      314.416946        3516.109813      230.042058   \n",
-       "Dlg3              na      244.669525        1009.880927      242.044252   \n",
-       "Uhrf1             na      859.111091       23704.051793      759.138790   \n",
-       "Fndc5             na      453.911788          32.548427      528.096550   \n",
-       "Ube2c             na      774.971345       12599.760032      812.148482   \n",
-       "...              ...             ...                ...             ...   \n",
-       "Gm49325           na      498.195865         524.293582      435.079544   \n",
-       "Sfta3-ps          na       63.104810         449.520169      106.019383   \n",
-       "Bc1               na    13236.510573         540.127952     7083.295007   \n",
-       "Gm50241           na       21.034937        1599.271363      188.034377   \n",
-       "Gm29695           na       40.962771         336.920205       55.010057   \n",
+       "           DESCRIPTION  forebrain_P0_2  forebrain_E10.5_1  forebrain_P0_1  \\\n",
+       "NAME                                                                        \n",
+       "Gnai3               na     9202.231171       14212.226704     8662.583742   \n",
+       "Cdc45               na      314.416946        3516.109813      230.042058   \n",
+       "H19                 na      676.439274        3572.409795      578.105693   \n",
+       "Scml2               na      157.208473         312.288963      181.033097   \n",
+       "Apoh                na        6.642612           0.000000        6.001097   \n",
+       "...                ...             ...                ...             ...   \n",
+       "AC093451.1          na        4.428408           0.000000        0.000000   \n",
+       "AC154013.1          na        0.000000           1.759374        0.000000   \n",
+       "AC127285.1          na        2.214204           6.157811        1.000183   \n",
+       "CT868690.1          na        7.749713           0.879687        2.000366   \n",
+       "AC117663.3          na        1.107102           1.759374        3.000549   \n",
        "\n",
-       "          forebrain_E10.5_2  \n",
-       "NAME                         \n",
-       "Cdc45           3574.620925  \n",
-       "Dlg3            1113.534396  \n",
-       "Uhrf1          24678.145384  \n",
-       "Fndc5             54.604139  \n",
-       "Ube2c          12513.123384  \n",
-       "...                     ...  \n",
-       "Gm49325          585.044341  \n",
-       "Sfta3-ps         511.913799  \n",
-       "Bc1              584.069267  \n",
-       "Gm50241         1500.638735  \n",
-       "Gm29695          195.014780  \n",
+       "            forebrain_E10.5_2  \n",
+       "NAME                           \n",
+       "Gnai3            14009.861823  \n",
+       "Cdc45             3574.620925  \n",
+       "H19               4100.185758  \n",
+       "Scml2              275.945914  \n",
+       "Apoh                 0.000000  \n",
+       "...                       ...  \n",
+       "AC093451.1           0.000000  \n",
+       "AC154013.1           3.900296  \n",
+       "AC127285.1          20.476552  \n",
+       "CT868690.1           0.000000  \n",
+       "AC117663.3           2.925222  \n",
        "\n",
-       "[487 rows x 5 columns]"
+       "[26782 rows x 5 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
